[project]
name = "pandago-client"
version = "0.1.0"
description = "An API client for Pandago delivery service"
authors = [
    {name = "Utsob Roy", email = "roy@utsob.me"},
]
dependencies = [
    "pydantic>=2.8.2",
    "requests>=2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
